kubernetes/apps/spark/jupyter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-jupyter
  namespace: spark
  labels:
    app: spark-jupyter
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: spark-jupyter
