kubernetes/apps/spark/jupyter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-jupyter
  namespace: spark
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - __JUPYTER_HOST__
      secretName: __INGRESS_TLS_SECRET_NAME__
  rules:
    - host: __JUPYTER_HOST__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-jupyter
                port:
                  number: 8888
